--- a/trunk/ressourcen/jd/languages/german.lng
+++ b/trunk/ressourcen/jd/languages/german.lng
@@ -98,7 +98,7 @@ gui.column_host = Host
 gui.column_id = ID
 gui.column_needs = Benötigt
 gui.column_plugin = Plugin
-gui.column_status = Status
+gui.column_status = Aktivieren
 gui.column_useplugin = verwenden
 gui.column_version = Version
 gui.component.textarea.context.copy = Kopieren
