--- a/trunk/ressourcen/jd/languages/english.lng
+++ b/trunk/ressourcen/jd/languages/english.lng
@@ -98,7 +98,7 @@ gui.column_host = Host
 gui.column_id = ID
 gui.column_needs = Needs
 gui.column_plugin = Plugin
-gui.column_status = Status
+gui.column_status = Activate
 gui.column_useplugin = Use Plugin
 gui.column_version = Version
 gui.component.textarea.context.copy = Copy
