-changed defaultvalue from validUntil (please review this if it breaks something)

--- a/trunk/ressourcen/jd/languages/english.lng
+++ b/trunk/ressourcen/jd/languages/english.lng
@@ -186,7 +186,7 @@ gui.config.gui.languagefileinfo = Current Language File: %s from %s in version %
 gui.config.gui.linkgrabber.onlinecheck = Link Grabber: Link status (available)
 gui.config.gui.look.tab = Look & Feel
 gui.config.gui.plaf = Style (restart to apply)
-gui.config.gui.premiumconfigfilednum = How many Premiumaccount fields should be displayed
+gui.config.gui.premiumconfigfilednum = How many Premiumaccount fields should be displayed (Restart required)
 gui.config.gui.showsplash = Show splash screen on program startup
 gui.config.gui.soundtheme = Soundtheme
 gui.config.gui.testbrowser = Test browser
