--- a/trunk/ressourcen/jd/languages/german.lng
+++ b/trunk/ressourcen/jd/languages/german.lng
@@ -186,7 +186,7 @@ gui.config.gui.languagefileinfo = Momentane Sprachdatei: %s übersetzt von %s in
 gui.config.gui.linkgrabber.onlinecheck = Linkgrabber: Linkstatus überprüfen (Verfügbarkeitscheck)
 gui.config.gui.look.tab = Anzeige & Bedienung
 gui.config.gui.plaf = Style (Neustart nötig)
-gui.config.gui.premiumconfigfilednum = Anzahl der anzuzeigenden Premiumaccounts
+gui.config.gui.premiumconfigfilednum = Anzahl der anzuzeigenden Premiumaccounts (Neustart nötig)
 gui.config.gui.showsplash = Splashscreen beim Start zeigen
 gui.config.gui.soundtheme = Soundtheme
 gui.config.gui.testbrowser = Browser testen
