--- a/trunk/ressourcen/jd/languages/Polski.lng
+++ b/trunk/ressourcen/jd/languages/Polski.lng
@@ -2,10 +2,10 @@
 $translater$ = djuzi
 $version$ = $Revision$
 action.passwordlist.name = Lista haseł
-addons.jdgrowlnotification.menu.enable = Powiadomienia aktywne
+addons.jdgrowlnotification.menu = Growl Powiadomienia
 addons.jdlowspeed.statusmessage.disabled = Deaktywuj wykrywanie powolnych transferów
 addons.jdlowspeed.statusmessage.enabled = Aktywuj wykrywanie powolnych transferów
-addons.jdshutdown.menu = Zamykanie systemu po ukończonym pobieraniu
+addons.jdshutdown.menu = Zamykanie po ukończonym pobieraniu
 addons.jdshutdown.menu.disable = Deaktywuj zamykanie systemu
 addons.jdshutdown.menu.enable = Aktywuj zamykanie systemu
 addons.jdshutdown.run = Zamknij system teraz
@@ -1616,7 +1616,7 @@ plugins.optional.remotecontrol.name = Zdalna kontrola
 plugins.optional.remotecontrol.port = Port:
 plugins.optional.remotecontrol.startedonport = uruchomiona na porcie
 plugins.optional.remotecontrol.stopped = wyłączona.
-plugins.optional.remotecontrol.toggle = Włącz/Wyłącz
+plugins.optional.remotecontrol.toggle = Włącz/Wyłącz RemoteControl
 plugins.optional.streamsharingtool.action.end = Zamknij
 plugins.optional.streamsharingtool.action.save.dlc.finished = Kontener StreamingShare gotowy do użycia
 plugins.optional.streamsharingtool.action.start = Start
