--- a/trunk/ressourcen/jd/languages/Russian.lng
+++ b/trunk/ressourcen/jd/languages/Russian.lng
@@ -2,7 +2,7 @@ $translater$ = ChangeMe
 $version$ = $Revision$
 addons.jdlowspeed.statusmessage.disabled = Запретить медленное обнаружение
 addons.jdlowspeed.statusmessage.enabled = Разрешить медленное обнаружение
-addons.jdshutdown.menu.enable = Разрешить закрытие
+addons.jdshutdown.menu = Разрешить закрытие
 addons.schedule.menu.abort = Прервать
 addons.schedule.menu.add = Добавить
 addons.schedule.menu.create = Создать
