--- a/trunk/ressourcen/jd/languages/english.lng
+++ b/trunk/ressourcen/jd/languages/english.lng
@@ -1,9 +1,9 @@
 $translater$ = JD-Team
 $version$ = $Revision$
-addons.jdgrowlnotification.menu.enable = Enabled messages
+addons.jdgrowlnotification.menu = Growl Messages
 addons.jdlowspeed.statusmessage.disabled = Disable Low Speeddetection
 addons.jdlowspeed.statusmessage.enabled = Enable lowspeed detection
-addons.jdshutdown.menu = Shutdown system after downloads finished
+addons.jdshutdown.menu = Shutdown after downloads finished
 addons.jdshutdown.statusmessage.disabled = The System will NOT be shut down by JDownloader
 addons.jdshutdown.statusmessage.enabled = JDownloader will shut down your System after downloads finished
 addons.schedule.menu.add = Add
@@ -951,7 +951,7 @@ plugins.optional.langfileeditor.keychart.old = Old
 plugins.optional.langfileeditor.keys = Keys
 plugins.optional.langfileeditor.languagefile = Language File: 
 plugins.optional.langfileeditor.languagefilevalue = Language File Value
-plugins.optional.langfileeditor.name = JDLangFileEditor
+plugins.optional.langfileeditor.name = Language File Editor
 plugins.optional.langfileeditor.new = New
 plugins.optional.langfileeditor.patternentry = <Entry matches Pattern>
 plugins.optional.langfileeditor.pickdonecolor = Pick Color for Done Entries
@@ -1011,7 +1011,7 @@ plugins.optional.remotecontrol.name = RemoteControl
 plugins.optional.remotecontrol.port = Port:
 plugins.optional.remotecontrol.startedonport = started on port
 plugins.optional.remotecontrol.stopped = stopped.
-plugins.optional.remotecontrol.toggle = Toggle Start/Stop
+plugins.optional.remotecontrol.toggle = Start/Stop RemoteControl
 plugins.optional.streamsharingtool.action.end = Exit
 plugins.optional.streamsharingtool.action.save.dlc.finished = StreamingShare DLC ready 2 use!
 plugins.optional.streamsharingtool.action.start = Start StreamSharing Tool
