--- a/trunk/ressourcen/jd/languages/german.lng
+++ b/trunk/ressourcen/jd/languages/german.lng
@@ -1,9 +1,9 @@
 $translater$ = JD-Team
 $version$ = $Revision$
-addons.jdgrowlnotification.menu.enable = Meldungen aktivieren
+addons.jdgrowlnotification.menu = Growl Benachrichtigungen
 addons.jdlowspeed.statusmessage.disabled = Low Speederkennung ausschalten
 addons.jdlowspeed.statusmessage.enabled = Low Speederkennung einschalten
-addons.jdshutdown.menu = System nach dem Downloaden herunterfahren
+addons.jdshutdown.menu = Nach dem Downloaden herunterfahren
 addons.jdshutdown.statusmessage.disabled = Das System wird nach dem Download NICHT heruntergefahren.
 addons.jdshutdown.statusmessage.enabled = Das System wird nach dem Download heruntergefahren.
 addons.schedule.menu.add = Hinzufügen
@@ -942,7 +942,7 @@ plugins.optional.langfileeditor.keychart.old = Veraltet
 plugins.optional.langfileeditor.keys = Schlüssel
 plugins.optional.langfileeditor.languagefile = Language File: 
 plugins.optional.langfileeditor.languagefilevalue = Language File Wert
-plugins.optional.langfileeditor.name = JDLangFileEditor
+plugins.optional.langfileeditor.name = Sprachdatei Editor
 plugins.optional.langfileeditor.new = Neu
 plugins.optional.langfileeditor.patternentry = <Eintrag passt auf Pattern>
 plugins.optional.langfileeditor.pickdonecolor = Farbe für fertige Einträge auswählen
@@ -999,6 +999,7 @@ plugins.optional.premiumcollector.password = Passwort
 plugins.optional.premiumcollector.username = Username
 plugins.optional.remotecontrol.name = RemoteControl
 plugins.optional.remotecontrol.port = Port:
+plugins.optional.remotecontrol.toggle = RemoteControl starten/beenden
 plugins.optional.streamsharingtool.action.end = Beenden
 plugins.optional.streamsharingtool.action.save.dlc.finished = StreamingShare DLC fertig.
 plugins.optional.streamsharingtool.action.start = StreamSharing Tool starten
