minor fix to the Turkish.lng file

--- a/trunk/ressourcen/jd/languages/Turkish.lng
+++ b/trunk/ressourcen/jd/languages/Turkish.lng
@@ -298,7 +298,7 @@ gui.dialogs.progress.title = İşlem gerçekleştiriliyor... Lütfen bekleyin
 gui.download.create_connection = Bağlanıyor...
 gui.download.filesize_unknown = (Dosya boyutu bilinmiyor)
 gui.download.onlinecheckfailed = [Mevcut değil]
-gui.download.waittime_status = Bekle %s [saniye:dakika]
+gui.download.waittime_status = Bekle %s [dak:san]
 gui.downloadlink.aborted = [Vazgeçildi]
 gui.downloadlink.disabled = [devre dışı bırakıldı]
 gui.downloadlink.errorpostprocess = [Başarısız] %s
